RESOLVED FIXED 107104
[EFL] Missing context menus strings
https://bugs.webkit.org/show_bug.cgi?id=107104
Summary [EFL] Missing context menus strings
Michal Pakula vel Rutka
Reported 2013-01-17 00:56:17 PST
Add 5 missing localization strings for text direction context menus.
Attachments
proposed patch (1.87 KB, patch)
2013-01-17 01:28 PST, Michal Pakula vel Rutka
no flags
Michal Pakula vel Rutka
Comment 1 2013-01-17 01:28:11 PST
Created attachment 183143 [details] proposed patch
WebKit Review Bot
Comment 2 2013-01-21 22:43:51 PST
Comment on attachment 183143 [details] proposed patch Clearing flags on attachment: 183143 Committed r140386: <http://trac.webkit.org/changeset/140386>
WebKit Review Bot
Comment 3 2013-01-21 22:43:56 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.