[EFL] Missing context menus strings https://bugs.webkit.org/show_bug.cgi?id=107104

Patch by Michał Pakuła vel Rutka <m.pakula@samsung.com> on 2013-01-21
Reviewed by Kenneth Rohde Christiansen.

Add 5 missing localization strings for text direction context menus.

* platform/efl/LocalizedStringsEfl.cpp:
(WebCore::contextMenuItemTagRightToLeft):
(WebCore::contextMenuItemTagLeftToRight):
(WebCore::contextMenuItemTagWritingDirectionMenu):
(WebCore::contextMenuItemTagTextDirectionMenu):
(WebCore::contextMenuItemTagDefaultDirection):

Canonical link: https://commits.webkit.org/125735@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@140386 268f45cc-cd09-0410-ab3c-d52691b4dbfc